--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <div class="container">
     <!-- Video 1 -->
     <div class="box">
-      <iframe width="280" height="158" src="https://www.youtube.com/embed/vqW_z9Gvjx8" 
+      <iframe width="280" height="158" src="https://www.youtube.com/embed/48lhqX3jpKY" 
               title="Shakira - Hips Don't Lie" frameborder="0" allowfullscreen></iframe>
     </div>
     <!-- Video 2 -->
@@ -106,11 +106,6 @@
               title="SAIKO - BADGYAL" frameborder="0" allowfullscreen></iframe>
     </div>
     <!-- Video 3 -->
-    <div class="box">
-      <iframe width="280" height="158" src="https://www.youtube.com/embed/pRpeEdMmmQ0" 
-              title="Shakira - Waka Waka" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <!-- Video 4 -->
     <div class="box">
       <iframe width="280" height="158" src="https://www.youtube.com/embed/pRpeEdMmmQ0" 
               title="Shakira - Waka Waka" frameborder="0" allowfullscreen></iframe>
