--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
   <div class="container">
     <!-- Video 1 -->
     <div class="box">
-      <iframe width="280" height="158" src="https://www.youtube.com/embed/5MTF-0CZx4g" 
+      <iframe width="280" height="158" src="https://www.youtube.com/watch?app=desktop&v=b4JQYwzF0xY" 
               title="Ndotz - Embrace It" frameborder="0" allowfullscreen></iframe>
     </div>
     <!-- Video 2 -->
     <div class="box">
-      <iframe width="280" height="158" src="https://www.youtube.com/embed/pRpeEdMmmQ0" 
-              title="Shakira - Waka Waka" frameborder="0" allowfullscreen></iframe>
+      <iframe width="280" height="158" src="https://www.youtube.com/watch?v=ekO0koy130M" 
+              title="Frenamos - 🔫 RANDALL13 x WAY B x K9 OG x LILCUBA" frameborder="0" allowfullscreen></iframe>
     </div>
     <!-- Video 3 -->
     <div class="box">
