--- a/index.html
+++ b/index.html
@@ -109,13 +109,14 @@
     </div>
     <!-- Video 3 -->
     <div class="box">
-      <iframe width="280" height="158" src="https://www.youtube.com/embed/4LlXIMcshds" 
-              title="Video no disponible" frameborder="0" allowfullscreen></iframe>
+      <iframe width="280" height="158" src="https://www.youtube.com/embed/jMcV_OP8LSw " 
+                title="Chegou 3 - BR" frameborder="0" allowfullscreen></iframe>
+      </div>
     </div>
     <!-- Video 4 -->
     <div class="box">
-      <iframe width="280" height="158" src="https://www.youtube.com/embed/pRpeEdMmmQ0" 
-              title="Shakira - Waka Waka" frameborder="0" allowfullscreen></iframe>
+      <iframe width="280" height="158" src="https://www.youtube.com/embed/N4b1K9GBLQ4" 
+              title="Helwa Ya Balady" frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 </div>
