--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
 <html lang="en, eu">
-
-<link rel="icon" type="image/png" href="./img/tecno-removebg-preview.png">
-
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,7 +7,7 @@
   <meta name="theme-color" content="#FFAA00">
   <meta name="description" content="template.">
   <title>ISHAQ MESSILI</title>
-  <link rel="apple-touch-icon" href="/example.png">
+  <link rel="icon" type="image/png" href="./img/tecno-removebg-preview.png">
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/hala.css" />
   <!-- Font Awesome -->
@@ -19,196 +16,23 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <style>
-    .videos .container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .video {
-      margin: 10px;
-      width: 150px; /* Ancho ajustado para videos pequeños */
-    }
-
-    .video iframe {
-      width: 100%;
-      height: 84px; /* Altura ajustada para videos pequeños */
-    }
-
-    .video-four {
-      width: 150px; /* Ancho ajustado para el video 4 */
-      margin: 10px auto; /* Centrar el video 4 */
-    }
-  </style>
 </head>
 
 <body>
-  <!-- Start Header -->
-  <div class="header" id="#header">
+  <!-- Your existing content goes here -->
+
+  <!-- Start Google Slides Embed -->
+  <div class="gallery" id="presentation">
+    <h2 class="main-title">Presentación</h2>
     <div class="container">
-      <a href="#" class="logo">Ishaq Messili 2°D</a>
-      <ul class="mainmenu">
-        <li><a href="#features">Inicio</a></li>
-        <li><a href="#gallery">Taller</a></li>
-        <li><a href="#our-skills">Personal</a></li>
-        <li><a href="#">Mas Info</a>
-          <!-- Start Megamenu -->
-          <div class="megamenu">
-            <div class="image">
-              <img src="imgs/tecno-removebg-preview.png" alt="">
-            </div>
-            <ul class="links">
-              <li>
-                <a href="#testimonials"><i class="far fa-comments fa-fw"></i> Inicio</a>
-              </li>
-              <li>
-                <a href="#team"><i class="far fa-user fa-fw"></i> Fotos</a>
-              </li>
-            </ul>
-          </div>
-          <!-- End Megamenu -->
-        </li>
-      </ul>
-    </div>
-  </div>
-  <!-- End Header -->
-
-  <!-- Start Landing -->
-  <div class="landing">
-    <div class="container">
-      <div class="text">
-        <h1>TECNOLOGIA Y</h1>
-        <p>DIGITALIZACION.</p>
-      </div>
-      <div class="image">
-        <img src="imgs/tecno-removebg-preview.png" alt="">
-      </div>
-    </div>
-    <a href="#our-skills" class="go-down">
-      <i class="fas fa-angle-double-down fa-2x"></i>
-    </a>
-  </div>
-  <!-- End Landing -->
-
- 
-
-<!-- Start Personal -->
-<div class="gallery" id="our-skills">
-  <h2 class="main-title">Personal</h2>
-  <div class="container">
-    <!-- Video 1 -->
-    <div class="box">
-      <iframe width="280" height="158" src="https://www.youtube.com/embed/b4JQYwzF0xY" 
-              title="Ndotz - Embrace It" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <!-- Video 2 -->
-    <div class="box">
-      <iframe width="280" height="158" src="https://www.youtube.com/embed/ekO0koy130M" 
-              title="Frenamos - 🔫 RANDALL13 x WAY B x K9 OG x LILCUBA" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <!-- Video 3 -->
-    <div class="box">
-      <iframe width="280" height="158" src="https://www.youtube.com/embed/jMcV_OP8LSw " 
-                title="Chegou 3 - BR" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <!-- Video 4 -->
-    <div class="box">
-      <iframe width="280" height="158" src="https://www.youtube.com/embed/N4b1K9GBLQ4" 
-              title="Helwa Ya Balady" frameborder="0" allowfullscreen></iframe>
-    </div>
-  </div>
-</div>
-<!-- End Personal -->
-
-<style>
-  body {
-    background-color: #f0f0f0; /* Fondo gris claro */
-  }
-
-  .gallery {
-    text-align: center;
-    padding: 20px;
-  }
-
-  .main-title {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
-  }
-
-  .container {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    gap: 15px;
-    justify-items: center;
-  }
-
-  .box {
-    max-width: 280px;
-    background-color: #fff;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s;
-  }
-
-  .box:hover {
-    transform: translateY(-5px);
-  }
-
-  iframe {
-    border-radius: 12px; /* Bordes redondeados para el video */
-    width: 100%;
-    height: 158px;
-  }
-</style>
-
-  
-
-  <div class="gallery" id="gallery">
-    <h2 class="main-title">Taller</h2>
-    <div class="container">
-      <!-- BOX 1 -->
       <div class="box">
-        <div class="image">
-          <img src="imgs/gallery-01.png" alt="">
-        </div>
-      </div>
-      <!-- BOX 2 -->
-      <div class="box">
-        <div class="image">
-          <img src="imgs/gallery-02.png" alt="">
-        </div>
-      </div>
-      <!-- BOX 3 -->
-      <div class="box">
-        <div class="image">
-          <img src="imgs/gallery-03.jpg" alt="">
-        </div>
-      </div>
-      <!-- BOX 4 -->
-      <div class="box">
-        <div class="image">
-          <img src="imgs/gallery-04.png" alt="">
-        </div>
-      </div>
-      <!-- BOX 5 -->
-      <div class="box">
-        <div class="image">
-          <img src="imgs/gallery-05.jpg" alt="">
-        </div>
-      </div>
-      <!-- BOX 6 -->
-      <div class="box">
-        <div class="image">
-          <img src="imgs/gallery-06.png" alt="">
-        </div>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQI1I5RxdBopLgqBz7l3PjU3tgiMWLHQ1Wcuf8p5djnPXLEkFJu34cRSbALrvW5GRRByVG4wRkhbbz/pub?start=true&loop=true&delayms=5000" 
+                width="700" height="400" frameborder="0" allowfullscreen></iframe>
       </div>
     </div>
   </div>
+  <!-- End Google Slides Embed -->
 
-
+  <!-- Your existing content continues here -->
 </body>
-
 </html>
