--- a/index.html
+++ b/index.html
@@ -206,17 +206,62 @@
         </div>
       </div>
 
-  <!-- Start Google Slides Embed -->
-  <div class="gallery" id="presentation">
-    <h2 class="main-title">Presentación</h2>
-    <div class="container">
-      <div class="box">
-        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQI1I5RxdBopLgqBz7l3PjU3tgiMWLHQ1Wcuf8p5djnPXLEkFJu34cRSbALrvW5GRRByVG4wRkhbbz/pub?start=true&loop=true&delayms=5000" 
-                width="700" height="400" frameborder="0" allowfullscreen></iframe>
-      </div>
-    </div>
+<!-- Start Google Slides Embed -->
+<div class="presentation-section" id="presentation">
+  <h2 class="main-title">Presentación</h2>
+  <div class="presentation-container">
+    <iframe 
+      src="https://docs.google.com/presentation/d/e/2PACX-1vQI1I5RxdBopLgqBz7l3PjU3tgiMWLHQ1Wcuf8p5djnPXLEkFJu34cRSbALrvW5GRRByVG4wRkhbbz/pub?start=true&loop=true&delayms=5000" 
+      frameborder="0" 
+      allowfullscreen>
+    </iframe>
   </div>
-  <!-- End Google Slides Embed -->
+</div>
+<!-- End Google Slides Embed -->
+
+<style>
+  /* Sección de presentación */
+  .presentation-section {
+    text-align: center;
+    padding: 40px 20px;
+    background-color: #f9f9f9; /* Fondo claro */
+    border-top: 2px solid #FFAA00; /* Línea decorativa superior */
+  }
+
+  .presentation-section .main-title {
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    color: #333;
+  }
+
+  .presentation-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background: #fff; /* Fondo blanco */
+    border: 1px solid #ddd; /* Borde gris claro */
+    border-radius: 8px; /* Bordes redondeados */
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Sombra ligera */
+    max-width: 80%;
+    margin: 0 auto; /* Centrar contenedor */
+  }
+
+  .presentation-container iframe {
+    width: 100%;
+    height: 500px; /* Altura ajustada */
+    border-radius: 8px; /* Bordes redondeados del iframe */
+  }
+
+  /* Ajuste responsivo */
+  @media (max-width: 768px) {
+    .presentation-container iframe {
+      height: 300px; /* Ajustar altura en pantallas pequeñas */
+    }
+  }
+</style>
+
 
   <!-- Your existing content continues here -->
 </body>
