--- a/index.html
+++ b/index.html
@@ -219,50 +219,57 @@
 </div>
 <!-- End Google Slides Embed -->
 
+<!-- Start Google Slides Embed -->
+<div class="presentation-section" id="presentation">
+  <h2 class="main-title">Presentación</h2>
+  <div class="presentation-container">
+    <iframe 
+      src="https://docs.google.com/presentation/d/e/2PACX-1vQI1I5RxdBopLgqBz7l3PjU3tgiMWLHQ1Wcuf8p5djnPXLEkFJu34cRSbALrvW5GRRByVG4wRkhbbz/pub?start=true&loop=true&delayms=5000" 
+      frameborder="0" 
+      allowfullscreen>
+    </iframe>
+  </div>
+</div>
+<!-- End Google Slides Embed -->
+
 <style>
   /* Sección de presentación */
   .presentation-section {
     text-align: center;
-    padding: 40px 20px;
+    padding: 20px;
     background-color: #f9f9f9; /* Fondo claro */
     border-top: 2px solid #FFAA00; /* Línea decorativa superior */
+    margin: 0 auto;
   }
 
   .presentation-section .main-title {
     font-size: 28px;
     font-weight: bold;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color: #333;
   }
 
   .presentation-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    background: #fff; /* Fondo blanco */
-    border: 1px solid #ddd; /* Borde gris claro */
-    border-radius: 8px; /* Bordes redondeados */
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); /* Sombra ligera */
-    max-width: 80%;
-    margin: 0 auto; /* Centrar contenedor */
+    position: relative;
+    width: 100%;
+    max-width: 900px; /* Ancho máximo */
+    margin: 0 auto;
+    overflow: hidden; /* Evita que el contenido salga del marco */
   }
 
   .presentation-container iframe {
     width: 100%;
-    height: 500px; /* Altura ajustada */
-    border-radius: 8px; /* Bordes redondeados del iframe */
+    height: 500px; /* Altura fija */
+    border: none;
   }
 
-  /* Ajuste responsivo */
+  /* Responsividad */
   @media (max-width: 768px) {
     .presentation-container iframe {
-      height: 300px; /* Ajustar altura en pantallas pequeñas */
+      height: 300px; /* Ajusta la altura en dispositivos móviles */
     }
   }
 </style>
 
-
-  <!-- Your existing content continues here -->
 </body>
 </html>
