--- a/index.html
+++ b/index.html
@@ -206,57 +206,12 @@
         </div>
       </div>
 
-<!-- Start Google Slides Embed -->
-<div class="presentation-section" id="presentation">
-  <h2 class="main-title">Presentación</h2>
-  <div class="presentation-container">
-    <iframe 
-      src="https://docs.google.com/presentation/d/e/2PACX-1vQI1I5RxdBopLgqBz7l3PjU3tgiMWLHQ1Wcuf8p5djnPXLEkFJu34cRSbALrvW5GRRByVG4wRkhbbz/pub?start=true&loop=true&delayms=5000" 
-      frameborder="0" 
-      allowfullscreen>
-    </iframe>
-  </div>
 </div>
-<!-- End Google Slides Embed -->
-
-<style>
-  /* Sección de presentación */
-  .presentation-section {
-    text-align: center;
-    padding: 20px;
-    background-color: #f9f9f9; /* Fondo claro */
-    border-top: 2px solid #FFAA00; /* Línea decorativa superior */
-    margin: 0 auto;
-  }
-
-  .presentation-section .main-title {
-    font-size: 28px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    color: #333;
-  }
-
-  .presentation-container {
-    position: relative;
-    width: 100%;
-    max-width: 900px; /* Ancho máximo */
-    margin: 0 auto;
-    overflow: hidden; /* Evita que el contenido salga del marco */
-  }
-
-  .presentation-container iframe {
-    width: 100%;
-    height: 500px; /* Altura fija */
-    border: none;
-  }
-
-  /* Responsividad */
-  @media (max-width: 768px) {
-    .presentation-container iframe {
-      height: 300px; /* Ajusta la altura en dispositivos móviles */
-    }
-  }
-</style>
+    <!-- Video 3 -->
+    <div class="box">
+      <iframe width="280" height="158" src="https://docs.google.com/presentation/d/1l3GGpz7zwPgJMyDMAHIxryovTZm0n98yagobKAQco8k/edit?usp=sharing" 
+                title="Presentacion" frameborder="0" allowfullscreen></iframe>
+    </div>
 
 </body>
 </html>
