--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <li><a href="#features">Inicio</a></li>
         <li><a href="#gallery">Taller</a></li>
         <li><a href="#our-skills">Personal</a></li>
+        <li><a href="https://docs.google.com/presentation/d/1l3GGpz7zwPgJMyDMAHIxryovTZm0n98yagobKAQco8k/edit?usp=sharing">Normas Taller</a></li>
         <li><a href="#">Mas Info</a>
           <!-- Start Megamenu -->
           <div class="megamenu">
@@ -205,13 +206,6 @@
           <img src="imgs/gallery-06.png" alt="">
         </div>
       </div>
-
-</div>
-    <!-- Video 3 -->
-    <div class="box">
-      <iframe width="280" height="158" src="https://docs.google.com/presentation/d/1l3GGpz7zwPgJMyDMAHIxryovTZm0n98yagobKAQco8k/edit?usp=sharing" 
-                title="Presentacion" frameborder="0" allowfullscreen></iframe>
-    </div>
 
 </body>
 </html>
